package com.com380;

public class Administration {
    private String confirmationNotice;


    // getters and setters
    public Report generateReport() {

        return null;
    };
    public boolean reservationCancel(int roomNum) {
        return false;
    }
    public boolean modifyReservation(Reservation n) {
        return false;
    }
    public void sendNotification(Reservation n) {

    }

}
