package com.com380;

import java.io.IOException;

public class Hotel{

    public static void main (String[] args) {

        new gui();

        System.out.println("got it working lets goo");


    }



}
