package com.com380;

public class Report {


    // functions
    public int getRoomNumber(int accountNum) {
        return accountNum;
    }
    public int getHotelOccupancy() {
        return 0;
    }
    public Customer getCustomerInfo(Customer p) {
        return p;
    }


}
